--- a/public/style.css
+++ b/public/style.css
@@ -2,3 +2,10 @@
     height: 400px;
     width: 100%;
 }
+
+#GUI {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    height: 400px;
+}
